feat(deployment): Archivos de despliegue se reducen a 1 docker compose donde se instancia la base de datos y el servicio api

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,27 @@
+# Etapa de construcción
 FROM golang:1.24.1-alpine AS builder
 
 WORKDIR /app
 
 COPY . .
 
-WORKDIR /app/cmd/
+RUN go install github.com/swaggo/swag/cmd/swag@latest
+
+RUN swag init
 
 RUN go mod tidy
 RUN go build -o /app/leal
 
-# Stage
+# Etapa final
 FROM alpine:latest
 
 WORKDIR /app
 
 COPY --from=builder /app/leal /app/leal
+COPY --from=builder /app/docs /app/docs
 
 RUN chmod +x /app/leal
+
+EXPOSE 6060
 
 CMD ["./leal"]
