--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5433
+POSTGRES_HOST=leal_postgres
+POSTGRES_PORT=5432
 POSTGRES_USER=leal_user
 POSTGRES_PASSWORD=leal_password.14789*
 POSTGRES_DB=leal
